<resources>
    <string name="app_name">Mobile-Tracker</string>
    <string name="missed_call">Missed call</string>
    <string name="incoming_call">Incoming call</string>
    <string name="didnt_connect">Didn\'t connect</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="rejected_call">Rejected call</string>
    <string name="call_logs">Call logs</string>
    <string name="message_logs">Message Logs</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="calls">Calls</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="you">you</string>
    <string name="full_message_activity">technology.nine.mobile_tracker.ChatActivity</string>
    <string name="todo">TODO</string>
    <string name="small_icon">smallIcon</string>
    <string name="large_icon">largeIcon</string>
    <string name="extra_picture">extraPicture</string>
    <string name="go_to_notification_access">Go To Notification Access</string>
    <string name="call_logs_is_empty">Call Logs is Empty</string>
    <string name="messages_logs_is_empty">Message logs is Empty</string>
    <string name="notification_logs_is_empty">Notification Logs is Empty</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="clear">Clear</string>
    <string name="next">Next</string>
    <string name="draw_an_unlock_pattern">Draw an unlock pattern</string>
    <string name="confirm">Confirm</string>
    <string name="draw_pattern_again_to_confirm">Draw pattern again to confirm</string>
    <string name="connect_at_four_dots">Connect at least 4 dots. Try again.</string>
</resources>
