<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/small_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:background="@null"
            android:contentDescription="@string/small_icon" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Messaging" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            tools:text="myeswanthr@gmail.com" />

        <ToggleButton
            android:id="@+id/expand_more"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:src="@drawable/ic_expand_more"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Messaging is running" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:textSize="12sp"
                tools:text="technology.nine.mobile_tracker.SMS_SERVICE" />

            <TextView
                android:id="@+id/big_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:textSize="12sp"
                tools:text="technology.nine.mobile_tracker.SMS_SERVICE" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_large_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                android:textSize="12sp"
                tools:text="11:20 pm" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:textSize="12sp"
                tools:text="sep 18,2018" />

            <ImageView
                android:id="@+id/large_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:contentDescription="@string/large_icon" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/extra_picture"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/extra_picture" />
</LinearLayout>